==> SiliconLabs/third_party_hw_drivers_extension/driver/public/silabs/environmental_bme280_ccs811/src/sparkfun_ccs811.c <==
#include <stddef.h>
#include <stdio.h>
#include <string.h>
#include <stdarg.h>
#include "sl_i2cspm.h"
#include "sparkfun_ccs811_config.h"
#include "sparkfun_ccs811.h"
#include "sl_sleeptimer.h"
#define SPARKFUN_CCS811_HW_ID           (0x81)

static uint32_t sparkfun_ccs811_wake(bool wake)
{
  if (wake) {
    GPIO_PinOutClear(SPARKFUN_CCS811_WAKE_PORT, SPARKFUN_CCS811_WAKE_PIN);
    sl_sleeptimer_delay_millisecond(1);
  } else {
    GPIO_PinOutSet(SPARKFUN_CCS811_WAKE_PORT, SPARKFUN_CCS811_WAKE_PIN);
    sl_sleeptimer_delay_millisecond(1);
  }
  return SL_STATUS_OK;
}

sl_status_t sparkfun_ccs811_init(sl_i2cspm_t *i2cspm)
{
  uint8_t id;
  sl_status_t status;

  GPIO_PinModeSet(SPARKFUN_CCS811_WAKE_PORT,
                  SPARKFUN_CCS811_WAKE_PIN,
                  gpioModePushPull,
                  1);

  /* Set the wake pin low */
  sparkfun_ccs811_wake(true);

  /* About 80 ms required to reliably start the device, wait a bit more */
  sl_sleeptimer_delay_millisecond(100);

  /* Check if the chip present and working by reading the hardware ID */
  status = sparkfun_ccs811_get_hardware_id(i2cspm, &id);
  if ((status != SL_STATUS_OK) || (id != SPARKFUN_CCS811_HW_ID)) {
    return SL_STATUS_INITIALIZATION;
  }

  /* Switch from boot mode to application mode */
  status = sparkfun_ccs811_start_application(i2cspm);
  if (status != SL_STATUS_OK) {
    return status;
  }

  status = sparkfun_ccs811_set_measure_mode(i2cspm,
                                            SPARKFUN_CCS811_MEASURE_MODE_DRIVE_MODE_1SEC);
  if (status != SL_STATUS_OK) {
    return status;
  }

  /* Go back to sleep */
  sparkfun_ccs811_wake(false);

  return SL_STATUS_OK;
}

sl_status_t sparkfun_ccs811_deinit(sl_i2cspm_t *i2cspm)
{
  /* Disable the sensor  */
  (void)i2cspm;

  sparkfun_ccs811_wake(false);

  return SL_STATUS_OK;
}

sl_status_t sparkfun_ccs811_read_mailbox(sl_i2cspm_t *i2cspm,
                                         uint8_t id,
                                         uint8_t length,
                                         uint8_t *data)
{
  I2C_TransferSeq_TypeDef seq;
  I2C_TransferReturn_TypeDef ret;
  uint8_t i2c_write_data[1];
  sl_status_t retval;

  retval = SL_STATUS_OK;

  sparkfun_ccs811_wake(true);

  /* Write data */
  i2c_write_data[0] = id;

  /* Configure I2C bus transaction */
  seq.addr = SPARKFUN_CCS811_DEFAULT_ADDR << 1;
  seq.flags = I2C_FLAG_WRITE_READ;
  seq.buf[0].data = i2c_write_data;
  seq.buf[0].len = 1;

  /* Select length of data to be read */
  seq.buf[1].data = data;
  seq.buf[1].len = length;

  ret = I2CSPM_Transfer(i2cspm, &seq);
  if (ret != i2cTransferDone) {
    retval = SL_STATUS_TRANSMIT;
  }

  sparkfun_ccs811_wake(false);

  return retval;
}

sl_status_t sparkfun_ccs811_get_measurement(sl_i2cspm_t *i2cspm,
                                            uint16_t *eco2,
                                            uint16_t *tvoc)
{
  I2C_TransferSeq_TypeDef seq;
  I2C_TransferReturn_TypeDef ret;
  uint8_t i2c_read_data[4];
  uint8_t i2c_write_data[1];
  sl_status_t retval;

  retval = SL_STATUS_OK;

  *eco2 = 0;
  *tvoc = 0;

  sparkfun_ccs811_wake(true);

  /* Read four bytes from the ALG_RESULT_DATA mailbox register */
  i2c_write_data[0] = SPARKFUN_CCS811_ADDR_ALG_RESULT_DATA;

  seq.addr = SPARKFUN_CCS811_DEFAULT_ADDR << 1;
  seq.flags = I2C_FLAG_WRITE_READ;
  seq.buf[0].data = i2c_write_data;
  seq.buf[0].len = 1;
  seq.buf[1].data = i2c_read_data;
  seq.buf[1].len = 4;

  ret = I2CSPM_Transfer(i2cspm, &seq);
  if (ret != i2cTransferDone) {
    retval = SL_STATUS_TRANSMIT;
  } else {
    /* Convert the read bytes to 16 bit values */
    *eco2 = ((uint16_t) i2c_read_data[0] << 8) + (uint16_t) i2c_read_data[1];
    *tvoc = ((uint16_t) i2c_read_data[2] << 8) + (uint16_t) i2c_read_data[3];
  }

  sparkfun_ccs811_wake(false);

  return retval;
}

sl_status_t sparkfun_ccs811_get_raw_data(sl_i2cspm_t *i2cspm,
                                         uint16_t *current,
                                         uint16_t *rawData)
{
  I2C_TransferSeq_TypeDef seq;
  I2C_TransferReturn_TypeDef ret;
  uint8_t i2c_read_data[2];
  uint8_t i2c_write_data[1];
  sl_status_t retval;

  retval = SL_STATUS_OK;

  *current = 0;
  *rawData = 0;

  sparkfun_ccs811_wake(true);

  /* Read four bytes from the SPARKFUN_CCS811_ADDR_RAW_DATA mailbox register */
  i2c_write_data[0] = SPARKFUN_CCS811_ADDR_RAW_DATA;

  seq.addr = SPARKFUN_CCS811_DEFAULT_ADDR << 1;
  seq.flags = I2C_FLAG_WRITE_READ;
  seq.buf[0].data = i2c_write_data;
  seq.buf[0].len = 1;
  seq.buf[1].data = i2c_read_data;
  seq.buf[1].len = 2;

  ret = I2CSPM_Transfer(i2cspm, &seq);
  if (ret != i2cTransferDone) {
    retval = SL_STATUS_TRANSMIT;
  } else {
    /* current: the upper six bits of Byte0 */
    *current = (uint16_t) ((i2c_read_data[0] >> 2) & 0x3F);

    /* raw ADC reading: the lower two bits of Byte0 is the MSB, Byte1 is the LSB
     */
    *rawData =
      (uint16_t) ((i2c_read_data[0] & 0x03) << 8) + (uint16_t) i2c_read_data[1];
  }

  sparkfun_ccs811_wake(false);

  return retval;
}

sl_status_t sparkfun_ccs811_software_reset(sl_i2cspm_t *i2cspm)
{
  I2C_TransferSeq_TypeDef seq;
  I2C_TransferReturn_TypeDef ret;
  uint8_t i2c_read_data[4];
  uint8_t i2c_write_data[5];
  sl_status_t retval;

  retval = SL_STATUS_OK;

  sparkfun_ccs811_wake(true);

  /* Write the 0x11 0xE5 0x72 0x8A key sequence to software reset register */
  /* The key sequence is used to prevent accidental reset                  */
  i2c_write_data[0] = SPARKFUN_CCS811_ADDR_SW_RESET;
  i2c_write_data[1] = 0x11;
  i2c_write_data[2] = 0xE5;
  i2c_write_data[3] = 0x72;
  i2c_write_data[4] = 0x8A;

  seq.addr = SPARKFUN_CCS811_DEFAULT_ADDR << 1;
  seq.flags = I2C_FLAG_WRITE;
  seq.buf[0].data = i2c_write_data;
  seq.buf[0].len = 5;
  seq.buf[1].data = i2c_read_data;
  seq.buf[1].len = 0;

  ret = I2CSPM_Transfer(i2cspm, &seq);
  if (ret != i2cTransferDone) {
    retval = SL_STATUS_TRANSMIT;
  }

  sparkfun_ccs811_wake(false);

  return retval;
}

sl_status_t sparkfun_ccs811_set_measure_mode(sl_i2cspm_t *i2cspm,
                                             uint8_t measMode)
{
  I2C_TransferSeq_TypeDef seq;
  I2C_TransferReturn_TypeDef ret;
  uint8_t i2c_read_data[1];
  uint8_t i2c_write_data[2];
  sl_status_t retval;

  retval = SL_STATUS_OK;

  sparkfun_ccs811_wake(true);

  /* Bits 7,6,2,1 and 0 are reserved, clear them */
  measMode = (measMode & 0x38);

  /* Write to the measurement mode register      */
  i2c_write_data[0] = SPARKFUN_CCS811_ADDR_MEASURE_MODE;
  i2c_write_data[1] = measMode;

  seq.addr = SPARKFUN_CCS811_DEFAULT_ADDR << 1;
  seq.flags = I2C_FLAG_WRITE;
  seq.buf[0].data = i2c_write_data;
  seq.buf[0].len = 2;
  seq.buf[1].data = i2c_read_data;
  seq.buf[1].len = 0;

  ret = I2CSPM_Transfer(i2cspm, &seq);
  if (ret != i2cTransferDone) {
    retval = SL_STATUS_TRANSMIT;
  }

  sparkfun_ccs811_wake(false);

  return retval;
}

static uint32_t sparkfun_ccs811_set_app_start(sl_i2cspm_t *i2cspm)
{
  I2C_TransferSeq_TypeDef seq;
  I2C_TransferReturn_TypeDef ret;
  uint8_t i2c_read_data[2];
  uint8_t i2c_write_data[1];
  sl_status_t retval;

  retval = SL_STATUS_OK;

  sparkfun_ccs811_wake(true);

  /* Perform a write with no data to the APP_START register to change the */
  /* state from boot mode to application mode                             */
  i2c_write_data[0] = SPARKFUN_CCS811_ADDR_APP_START;

  seq.addr = SPARKFUN_CCS811_DEFAULT_ADDR << 1;
  seq.flags = I2C_FLAG_WRITE;
  seq.buf[0].data = i2c_write_data;
  seq.buf[0].len = 1;
  seq.buf[1].data = i2c_read_data;
  seq.buf[1].len = 0;

  ret = I2CSPM_Transfer(i2cspm, &seq);
  if (ret != i2cTransferDone) {
    retval = SL_STATUS_TRANSMIT;
  }

  sparkfun_ccs811_wake(false);

  return retval;
}

sl_status_t sparkfun_ccs811_set_env_data(sl_i2cspm_t *i2cspm,
                                         int32_t tempData,
                                         uint32_t rhData)
{
  I2C_TransferSeq_TypeDef seq;
  I2C_TransferReturn_TypeDef ret;
  uint8_t i2c_read_data[4];
  uint8_t i2c_write_data[5];
  uint8_t humidityRegValue;
  uint8_t temperatureRegValue;
  sl_status_t retval;

  sparkfun_ccs811_wake(true);

  /* The CCS811 currently supports only 0.5% resolution        */
  /* If the fraction greater than 0.7 then round up the value  */
  /* Shift to the left by one to meet the required data format */
  if (((rhData % 1000) / 100) > 7) {
    humidityRegValue = (rhData / 1000 + 1) << 1;
  } else {
    humidityRegValue = (rhData / 1000) << 1;
  }

  /* If the fraction is greater than 0.2 or less than 0.8 set the            */
  /* LSB bit, which is the most significant bit of the fraction 2^(-1) = 0.5 */
  if ((((rhData % 1000) / 100) > 2) && (((rhData % 1000) / 100) < 8)) {
    humidityRegValue |= 0x01;
  }

  /* Add +25 C to the temperature value                        */
  /* The CCS811 currently supports only 0.5C resolution        */
  /* If the fraction greater than 0.7 then round up the value  */
  /* Shift to the left by one to meet the required data format */
  tempData += 25000;
  if (((tempData % 1000) / 100) > 7) {
    temperatureRegValue = (tempData / 1000 + 1) << 1;
  } else {
    temperatureRegValue = (tempData / 1000) << 1;
  }

  /* If the fraction is greater than 0.2 or less than 0.8 set the            */
  /* LSB bit, which is the most significant bit of the fraction 2^(-1) = 0.5 */
  if ((((tempData % 1000) / 100) > 2) && (((tempData % 1000) / 100) < 8)) {
    temperatureRegValue |= 0x01;
  }

  /* Write the correctly formatted values to the environmental data register */
  /* The LSB bytes of the humidity and temperature data are 0x00 because     */
  /* the current CCS811 supports only 0.5% and 0.5C resolution               */
  i2c_write_data[0] = SPARKFUN_CCS811_ADDR_ENV_DATA;
  i2c_write_data[1] = humidityRegValue;
  i2c_write_data[2] = 0x00;
  i2c_write_data[3] = temperatureRegValue;
  i2c_write_data[4] = 0x00;

  seq.addr = SPARKFUN_CCS811_DEFAULT_ADDR << 1;
  seq.flags = I2C_FLAG_WRITE;
  seq.buf[0].data = i2c_write_data;
  seq.buf[0].len = 5;
  seq.buf[1].data = i2c_read_data;
  seq.buf[1].len = 0;

  retval = SL_STATUS_OK;

  ret = I2CSPM_Transfer(i2cspm, &seq);
  if (ret != i2cTransferDone) {
    retval = SL_STATUS_TRANSMIT;
  }

  sparkfun_ccs811_wake(false);

  return retval;
}

static uint32_t sparkfun_ccs811_program_firmware(sl_i2cspm_t *i2cspm,
                                                 uint8_t buffer[])
{
  I2C_TransferSeq_TypeDef seq;
  I2C_TransferReturn_TypeDef ret;
  uint8_t i2c_read_data[2];
  uint8_t i2c_write_data[9];
  sl_status_t retval;

  retval = SL_STATUS_OK;

  sparkfun_ccs811_wake(true);

  /* Send the Write Data to FLASH command and 8 bytes of binary program code */
  i2c_write_data[0] = SPARKFUN_CCS811_ADDR_FW_PROGRAM;
  i2c_write_data[1] = buffer[0];
  i2c_write_data[2] = buffer[1];
  i2c_write_data[3] = buffer[2];
  i2c_write_data[4] = buffer[3];
  i2c_write_data[5] = buffer[4];
  i2c_write_data[6] = buffer[5];
  i2c_write_data[7] = buffer[6];
  i2c_write_data[8] = buffer[7];

  seq.addr = SPARKFUN_CCS811_DEFAULT_ADDR << 1;
  seq.flags = I2C_FLAG_WRITE;
  seq.buf[0].data = i2c_write_data;
  seq.buf[0].len = 9;
  seq.buf[1].data = i2c_read_data;
  seq.buf[1].len = 0;

  ret = I2CSPM_Transfer(i2cspm, &seq);
  if (ret != i2cTransferDone) {
    retval = SL_STATUS_TRANSMIT;
  }

  sparkfun_ccs811_wake(false);

  return retval;
}

static uint32_t sparkfun_ccs811_verify_application(sl_i2cspm_t *i2cspm,
                                                   bool *appValid)
{
  sl_status_t status;
  uint8_t reg;
  I2C_TransferSeq_TypeDef seq;
  I2C_TransferReturn_TypeDef ret;
  uint8_t i2c_read_data[2];
  uint8_t i2c_write_data[2];

  *appValid = false;

  sparkfun_ccs811_wake(true);

  /* Write (with no data) to the verify register to check if the firmware */
  /* programmed to the CCS811 was received error free                     */
  i2c_write_data[0] = SPARKFUN_CCS811_ADDR_FW_VERIFY;

  seq.addr = SPARKFUN_CCS811_DEFAULT_ADDR << 1;
  seq.flags = I2C_FLAG_WRITE;
  seq.buf[0].data = i2c_write_data;
  seq.buf[0].len = 1;
  seq.buf[1].data = i2c_read_data;
  seq.buf[1].len = 0;

  status = SL_STATUS_OK;
  ret = I2CSPM_Transfer(i2cspm, &seq);
  if (ret != i2cTransferDone) {
    status = SL_STATUS_TRANSMIT;
  } else {
    /* Wait until the Verify command finishes */
    sl_sleeptimer_delay_millisecond(100);

    /* Check the status register to see if there were no errors */
    status = sparkfun_ccs811_get_status(i2cspm, &reg);
    if ((status == SL_STATUS_OK) && ((reg & 0x10) == 0x10)) {
      *appValid = true;
    }
  }

  sparkfun_ccs811_wake(false);

  return status;
}

static uint32_t sparkfun_ccs811_erase_application(sl_i2cspm_t *i2cspm)
{
  I2C_TransferSeq_TypeDef seq;
  I2C_TransferReturn_TypeDef ret;
  uint8_t i2c_read_data[4];
  uint8_t i2c_write_data[5];
  sl_status_t retval;

  retval = SL_STATUS_OK;

  sparkfun_ccs811_wake(true);

  /* Write the 0xE7 0xA7 0xE6 0x09 key sequence to firmware erase register */
  /* The key sequence is used to prevent accidental erase                  */
  i2c_write_data[0] = SPARKFUN_CCS811_ADDR_FW_ERASE;
  i2c_write_data[1] = 0xE7;
  i2c_write_data[2] = 0xA7;
  i2c_write_data[3] = 0xE6;
  i2c_write_data[4] = 0x09;

  seq.addr = SPARKFUN_CCS811_DEFAULT_ADDR << 1;
  seq.flags = I2C_FLAG_WRITE;
  seq.buf[0].data = i2c_write_data;
  seq.buf[0].len = 5;
  seq.buf[1].data = i2c_read_data;
  seq.buf[1].len = 0;

  ret = I2CSPM_Transfer(i2cspm, &seq);
  if (ret != i2cTransferDone) {
    retval = SL_STATUS_TRANSMIT;
  }

  sparkfun_ccs811_wake(false);

  return retval;
}
